# app/Models/GarageTime.php
@@ -8,4 +8,12 @@ use Illuminate\Database\Eloquent\Model;
 class GarageTime extends Model
 {
     use HasFactory;
+
+    protected $fillable = [
+        "day",
+        "opening_time",
+        "closing_time",
+        "garage_id"
+    ];
+
 }
